force-app/main/default/objects/Channel__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The station group or media company that owns this channel.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Channels</relationshipLabel>
    <relationshipName>Channels</relationshipName>
    <type>Lookup</type>
</CustomField>