force-app/main/default/objects/Channel__c/fields/Channel_Code__c.field-meta.xml
<CustomField>
    <fullName>Channel_Code__c</fullName>
    <description>Short alphanumeric code identifying this channel (e.g., KMEX, KUVS). Must be unique across all channels.</description>
    <externalId>true</externalId>
    <label>Channel Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>